test/bad/global-alias.fnl
(let [x-y 1]
  (global x_y 2))
